fixed bug with trash animation by setting overflow:hidden on the body element

--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 body {
    background: url("assets/pin-board-67130_1280.jpg") no-repeat center center fixed;
    background-size: 100% 100%;
-   position: relative;
-   z-index: 1;
+   overflow: hidden;
 }
 
 body>div:first-child {
